Update: package.json add repository

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "i18n-language",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Simple Multi Language with Vanilla Javascript",
   "author": "Hyun Shin(kyaryunha@naver.com)",
   "license": "MIT",
   "keywords": [
     "i18n","multilanguage", "language", "multilingual"
   ],
+  "repository": "kyaryunha/i18n-language.js",
   "main": "./i18n-language.js",
   "browser": "./i18n-language.js"
 }
